# Projeto_Geolocalizacao

./: README.md  pyproject.toml
main/code/: geolocalizacao.py
main/data/: fibra.geojson  mapa.html  ordens.csv
